.metadata/.plugins/org.eclipse.cdt.ui/Day8_1.build.log
18:31:31 **** Incremental Build of configuration Debug for project Day8_1 ****
make -j8 all 
arm-none-eabi-gcc "../Src/i2c.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/i2c.d" -MT"Src/i2c.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/i2c.o"
../Src/i2c.c: In function 'I2C_Init':
../Src/i2c.c:21:33: error: 'I2C1_SDA' undeclared (first use in this function); did you mean 'I2C2_SDA'?
   21 |         GPIOB->MODER &= ~(3U << I2C1_SDA*2);
      |                                 ^~~~~~~~
      |                                 I2C2_SDA
../Src/i2c.c:21:33: note: each undeclared identifier is reported only once for each function it appears in
../Src/i2c.c:23:9: error: 'GPIO' undeclared (first use in this function); did you mean 'GPIOF'?
   23 |         GPIO->OTYPER |= (1U << I2C1_SDA);
      |         ^~~~
      |         GPIOF
../Src/i2c.c:38:28: error: 'I2C_CR1_ACK_POs' undeclared (first use in this function); did you mean 'I2C_CR1_ACK_Pos'?
   38 |         I2C1->CR1 |= (1 << I2C_CR1_ACK_POs);
      |                            ^~~~~~~~~~~~~~~
      |                            I2C_CR1_ACK_Pos
../Src/i2c.c:41:29: error: 'I2C_CCR_Pos' undeclared (first use in this function); did you mean 'I2C_CCR_FS'?
   41 |         I2C1->CCR |= (80 << I2C_CCR_Pos);
      |                             ^~~~~~~~~~~
      |                             I2C_CCR_FS
../Src/i2c.c:43:31: error: 'I2C' undeclared (first use in this function); did you mean 'I2C1'?
   43 |         I2C1->TRISE |= (17 << I2C-TRISE_TRISE_POS);
      |                               ^~~
      |                               I2C1
../Src/i2c.c:43:35: error: 'TRISE_TRISE_POS' undeclared (first use in this function); did you mean 'I2C_TRISE_TRISE_Pos'?
   43 |         I2C1->TRISE |= (17 << I2C-TRISE_TRISE_POS);
      |                                   ^~~~~~~~~~~~~~~
      |                                   I2C_TRISE_TRISE_Pos
../Src/i2c.c: In function 'I2C_SendSlaveAddres':
../Src/i2c.c:51:17: error: 'Slaveaddr' undeclared (first use in this function); did you mean 'slaveaddr'?
   51 |      I2C1->DR = Slaveaddr;
      |                 ^~~~~~~~~
      |                 slaveaddr
../Src/i2c.c:52:14: error: 'I2C1SR1' undeclared (first use in this function); did you mean 'I2C1'?
   52 |      while(!(I2C1SR1 & I2C_SR1_ADDR));
      |              ^~~~~~~
      |              I2C1
../Src/i2c.c: In function 'I2C_Restart':
../Src/i2c.c:73:9: warning: implicit declaration of function 'I2CStart'; did you mean 'I2C_Start'? [-Wimplicit-function-declaration]
   73 |         I2CStart();
      |         ^~~~~~~~
      |         I2C_Start
../Src/i2c.c: In function 'I2C_RecvDataAck':
../Src/i2c.c:83:16: warning: 'return' with a value, in function returning void [-Wreturn-type]
   83 |         return val;
      |                ^~~
../Src/i2c.c:77:6: note: declared here
   77 | void I2C_RecvDataAck()
      |      ^~~~~~~~~~~~~~~
../Src/i2c.c: At top level:
../Src/i2c.c:98:6: warning: conflicting types for 'I2CStart'; have 'void()'
   98 | void I2CStart()
      |      ^~~~~~~~
../Src/i2c.c:73:9: note: previous implicit declaration of 'I2CStart' with type 'void()'
   73 |         I2CStart();
      |         ^~~~~~~~
../Src/i2c.c: In function 'I2C_SendSlaveAddres':
../Src/i2c.c:56:1: warning: control reaches end of non-void function [-Wreturn-type]
   56 | }
      | ^
../Src/i2c.c: In function 'I2C_SendData':
../Src/i2c.c:63:1: warning: control reaches end of non-void function [-Wreturn-type]
   63 | }
      | ^
make: *** [Src/subdir.mk:37: Src/i2c.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

18:31:32 Build Failed. 9 errors, 5 warnings. (took 219ms)

